--- a/Projet Web/main.css
+++ b/Projet Web/main.css
@@ -120,8 +120,9 @@ html, body, div, applet, h1, p, a, em, ol, ul {
 			transition: opacity 0.325s ease-in-out;
 			position: relative;
 			margin-top: 3.5rem;
-		}
-
+        }
+        
+            /* barres verticales transparentes pour faire une marge */
 			#header > *:before {
 				content: '';
 				display: block;
@@ -130,27 +131,15 @@ html, body, div, applet, h1, p, a, em, ol, ul {
 				left: calc(50% - 1px);
 				width: 1px;
 				height: calc(3.5rem + 1px);
-				background: #ffffff;
+				background:transparent;
 			}
 
-		#header > :first-child {
+        #header > :first-child {
 			margin-top: 0;
 		}
 
 			#header > :first-child:before {
 				display: none;
-			}
-
-		#header .logo {
-			width: 5.5rem;
-			height: 5.5rem;
-			line-height: 5.5rem;
-			border: solid 1px #ffffff;
-			border-radius: 100%;
-		}
-
-			#header .logo .icon:before {
-				font-size: 2rem;
 			}
 
 		#header .content {
