--- a/main.css
+++ b/main.css
@@ -253,11 +253,24 @@ h1, h2, p, p2, a, em, ol, ul {
 			#header nav ul li {
 				padding-left: 0;
 				border-left: solid 1px #ffffff;
-			}
+            }
+            
+            @media (max-width: 730px) {
+                #header nav ul li {
+                    border-left: 0;
+                    border-top: solid 1px #ffffff;    
+                }
+            }
 
 				#header nav ul li:first-child {
 					border-left: 0;
-				}
+                }
+                
+                @media (max-width: 730px) {
+                    #header nav ul li:first-child {
+                        border-top: 0;  
+                    }
+                }
 
 				#header nav ul li a {
 					display: block;
